--- a/Payment.html
+++ b/Payment.html
@@ -5,24 +5,16 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Checkout & Payment</title>
     <script src="https://cdn.tailwindcss.com"></script>
-    <script src="https://www.paypal.com/sdk/js?client-id=ATKrzVCARP5-n0VyW8s9T9IOn9IbmHwJKRzC5bo9c7CqJ-5c1Z-g3Q28CNTyAmuluEmBPh54BNHRIP_A&components=buttons"></script>
+    <script src="https://www.paypal.com/sdk/js?client-id=ATKrzVCARP5-n0VyW8s9T9IOn9IbmHwJKRzC5bo9c7CqJ-5c1Z-g3Q28CNTyAmuluEmBPh54BNHRIP_A"></script>
 </head>
-<body class="bg-gray-100 min-h-screen flex flex-col items-center py-0"> <!-- ✅ إزالة الفراغ العلوي -->
+<body class="bg-gray-100 min-h-screen flex flex-col items-center">
 
-    <!-- ✅ الهيدر العلوي بدون فراغ -->
-    <header class="bg-purple-800 text-white p-4 w-full flex justify-between items-center">
+    <!-- ✅ الهيدر بدون مسافة بيضاء أعلاه -->
+    <header class="bg-purple-800 text-white w-full py-4 text-center shadow-lg">
         <h1 class="text-2xl font-bold">VELYORA</h1>
-        <nav>
-            <ul class="flex space-x-6">
-                <li><a href="index.html" class="hover:underline">Home</a></li>
-                <li><a href="shipping.html" class="hover:underline">Shipping</a></li>
-                <li><a href="track.html" class="hover:underline">Track</a></li>
-                <li><a href="contact.html" class="hover:underline">Contact</a></li>
-            </ul>
-        </nav>
     </header>
 
-    <!-- ✅ الإطار الرئيسي -->
+    <!-- ✅ الحاوية الرئيسية -->
     <div class="bg-white shadow-lg rounded-lg p-6 w-full max-w-lg mt-4">
 
         <!-- ✅ صورة المنتج وزر التحكم في الكمية -->
@@ -71,27 +63,31 @@
                 <span id="phone-code" class="bg-gray-300 px-3 py-2 rounded-l">+1</span>
                 <input type="tel" id="phone" placeholder="Phone Number" class="border border-gray-300 p-2 w-full rounded-r">
             </div>
+        </div>
 
-            <!-- ✅ خيارات الشحن -->
-            <h3 class="text-lg font-semibold text-gray-900 mb-2">Shipping Method</h3>
-            <select id="shipping" class="border border-gray-300 p-2 w-full rounded">
-                <option value="Standard (5-7 Days)">🚚 Standard (5-7 Days) - Free</option>
-                <option value="Express (2-3 Days)">⚡ Express (2-3 Days) - $9.99</option>
-            </select>
+        <!-- ✅ زر حفظ البيانات -->
+        <button id="saveInfo" class="bg-purple-700 text-white py-2 px-4 w-full rounded text-lg font-semibold mt-4">
+            Save Information
+        </button>
 
-            <!-- ✅ زر الحفظ -->
-            <button id="saveInfo" class="bg-purple-700 text-white py-2 px-4 w-full rounded text-lg font-semibold mt-4">
-                Save Information
-            </button>
-            <p class="text-gray-500 text-sm mt-2">You can also fill in your details directly in the payment section by clicking the black payment button.</p> <!-- ✅ الجملة التوضيحية -->
+        <!-- ✅ رسالة توضيحية -->
+        <p class="text-sm text-gray-600 mt-2 text-center">You can also enter your information directly in the Visa payment form by clicking the black button below.</p>
+
+        <!-- ✅ بيانات الطلب المطبوعة -->
+        <div id="order-summary" class="hidden bg-gray-50 p-4 mt-4 rounded">
+            <h3 class="text-lg font-semibold text-gray-900">Order Summary</h3>
+            <p><strong>Name:</strong> <span id="saved-name"></span></p>
+            <p><strong>Country:</strong> <span id="saved-country"></span></p>
+            <p><strong>City:</strong> <span id="saved-city"></span></p>
+            <p><strong>Address:</strong> <span id="saved-address"></span></p>
+            <p><strong>Postal Code:</strong> <span id="saved-postal"></span></p>
+            <p><strong>Phone:</strong> <span id="saved-phone"></span></p>
         </div>
 
         <!-- ✅ قسم الدفع -->
         <div id="payment-section" class="hidden mt-6">
             <h3 class="text-lg font-semibold text-purple-700 mb-3">Payment Info</h3>
             <p>All transactions are secure and encrypted.</p>
-
-            <!-- ✅ زر PayPal -->
             <div id="paypal-button-container" class="mb-4"></div>
         </div>
 
@@ -135,11 +131,19 @@
                     alert("❌ Please fill in all required fields before saving.");
                     return;
                 }
-                paymentSection.classList.remove("hidden");
+
+                document.getElementById("order-summary").classList.remove("hidden");
+                document.getElementById("payment-section").classList.remove("hidden");
+
+                document.getElementById("saved-name").textContent = document.getElementById("firstName").value + " " + document.getElementById("lastName").value;
+                document.getElementById("saved-country").textContent = document.getElementById("country").options[document.getElementById("country").selectedIndex].text;
+                document.getElementById("saved-city").textContent = document.getElementById("city").value;
+                document.getElementById("saved-address").textContent = document.getElementById("address").value;
+                document.getElementById("saved-postal").textContent = document.getElementById("postalCode").value;
+                document.getElementById("saved-phone").textContent = document.getElementById("phone").value;
             });
 
             paypal.Buttons().render("#paypal-button-container");
-
             updatePrice();
         });
     </script>
